# control-uC

./: .gdbinit  .gitignore  COPYING  Makefile  README  asf4.mk  config.mk  config.mk.default  lorawan.mk
application/: commands.c  commands.h  debug.c  debug.h  driver_init.c  driver_init.h  gpio_expander.c  gpio_expander.h  heater.c  heater.h  i2cbus.c  i2cbus.h  i2cbusmux.c  i2cbusmux.h  lowpower.c  lowpower.h  lte.c  lte.h  main.c  mode.c  mode.h  monitors.c  monitors.h  power.c  power.h  report.c  report.h  reset.c  reset.h  rno-g_config.h  sbc.c  sbc.h  time.c  time.h  update_bootloader.c  update_bootloader.h  usb.c  usb.h
asf4/: AtmelStart.gpdsc  assert_fix.sh  atmel_start_config.atstart  atmel_start_pins.h  driver_init.c  driver_init.h  pins_fix.sh  rno-g uC.atzip  rtc_fix.sh  unzip.sh
bootloader/: bootloader.c  bootloader_driver_init.c  bootloader_driver_init.h
client/: Makefile  README  client.c  client.h  constants.h  error.c  error.h  rno-g-client.c  rno-g-client.h  rno-g-console.h  rno-g-controller-extract.c  rno-g-controller-loader.c  rno-g-controller.c  rno-g-controllerd.c  rno-g-server.c  rno-g-server.h  rno-g-shell.c  rno-g-shell.h  server.c  server.h
config/: config.h  lorawan_config.h
csm-rs/: Cargo.toml
csm-rs/src/: cmd.rs  cmd_node.rs  main.rs
dbg/: gdbinit-jlink  start-jlink.sh
devboard/: AtmelStart.gpdsc  README  app.c  atmel_start_config.atstart  atmel_start_pins.h  devboard.atzip  driver_init.c  driver_init.h  unzip.sh
docs/: DESIGN.bootloader  DESIGN.commands  DESIGN.programming  DESIGN.spiflash
include/: rno-g-control.h  (+1 more)
(+96 files in other folders)
