[package]
name = "csm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
signal-hook = "0.3.17"
signal-hook-async-std = "0.2.2"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "console"
path = "src/console/bin/main.rs"
